# leben-ml

./: .gitignore  CMakeLists.txt  README.md
scripts/: debug_run.sh
src/: main.cpp  main.cu  test.cpp
src/common/: config.hpp  entrypoint.cpp  entrypoint.hpp
src/common/data/: DataSet.hpp  DataStream.cpp  DataStream.hpp  mnist.hpp
src/common/network/: NeuralNetwork.cpp  NeuralNetwork.hpp  initialization.cpp  initialization.hpp
src/cpu_only/: evaluation.cpp  evaluation.hpp  matrix.cpp  matrix.hpp
src/cpu_only/test/: math.hpp
